# stm32f469i-disc

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  memory.x  run_tests.sh
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: DISPLAY-PIXEL-FORMATS.md  HARDWARE-TEST-PLAN.md  PIN-CONSUMPTION.md  SDIO-CLOCK-SPEEDS.md  USB-GUIDE.md  known-issues.md
examples/: defmt_hse_test.rs  defmt_smoke.rs  display_cross_test_t5.rs  display_dsi_lcd.rs  display_hello_eg.rs  display_regdump.rs  display_ruler_rgb565.rs  display_test_rgb888.rs  display_touch.rs  display_touch_argb8888.rs  display_touch_rgb565.rs  fmc_sdram_test.rs  gpio_hal_blinky.rs  hw_diag.rs  sdio_raw_test.rs  sdio_speed_sweep.rs  test_all.rs  test_dma.rs  test_gpio.rs  test_lcd.rs  test_led.rs  test_sdram.rs  test_sdram_full.rs  test_soak.rs  test_timers.rs  test_touch.rs  test_uart.rs  test_usb.rs  test_usb_standalone.rs  usb_cdc_serial.rs  usb_minimal.rs
scripts/: usb_test.sh
src/: lcd.rs  led.rs  lib.rs  sdio.rs  sdram.rs  touch.rs
tests/host/: test_usb_host.py
