[package]
edition = "2024"
authors = ["Michael Fairman <mfairman@tegimeki.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F469 DISCOVERY kit"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "0BSD"
name = "stm32f469i-disc"
repository = "https://github.com/tegimeki/stm32f469i-disc"
version = "0.3.0"
readme = "README.md"

[package.metadata.docs.rs]
features = []
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = { version = "1.0", optional = true }
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
rtt-target = "0.6.0"
stm32-fmc = "0.4"
otm8009a = "0.1"

[dependencies.embedded-hal]
version = "1.0"

[dependencies.stm32f4xx-hal]
git = "https://github.com/Amperstrand/stm32f4xx-hal"
rev = "583a8f2d8417f0e12decad93aca169f56d34c0a3"
default-features = false
features = ["stm32f469", "stm32-fmc", "dsihost", "defmt", "sdio-host"]

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2"
features = ["unproven"]

[dev-dependencies]
defmt = "1.0"
defmt-rtt = "1.0"

[features]
fmc_sdram_test = ["defmt"]
display_dsi_lcd = ["defmt"]
gpio_hal_blinky = ["defmt"]
sdio-speed-test = []
sweep-1mhz = []
sweep-4mhz = []
sweep-8mhz = []
sweep-12mhz = []
sweep-24mhz = []

[profile.dev]
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
rpath = false

[profile.release]
debug = true
lto = true
opt-level = "s"
